--- a/config/i3/config
+++ b/config/i3/config
@@ -5,13 +5,13 @@ set $down  j
 set $up    k
 set $right l
 
-set $bg       #ffffff
-set $fg       #000000
+set $bg       #000000
+set $fg       #ffffff
 set $red      #ff0000
 set $darkgray #707070
 
-set $dmenu_style -b -fn 'Iosevka Nerd Font-15' -sb '#000000' -sf '#ffffff' -nb '#ffffff' -nf '#000000' "$@"
-set $term xfce4-terminal
+set $dmenu_style -b -fn 'Iosevka Nerd Font-15' -sf '#000000' -sb '#ffffff' -nf '#ffffff' -nb '#000000' "$@"
+set $term kitty
 
 font pango:Iosevka Nerd Font 12
 
@@ -36,7 +36,7 @@ bindsym XF86MonBrightnessUp       exec --no-startup-id brightnessctl   set   10%
 
 
 bindsym $mod+Shift+s exec --no-startup-id screenshot-select
-bindsym $mod+d       exec --no-startup-id dmenu_run $dmenu_style
+bindsym $mod+d       exec --no-startup-id dmenu-apps $dmenu_style
 bindsym $mod+Shift+u exec --no-startup-id clipmenu  $dmenu_style
 bindsym $mod+Shift+p exec --no-startup-id passmenu  $dmenu_style
 
