--- a/config/i3/config
+++ b/config/i3/config
@@ -19,9 +19,9 @@ exec --no-startup-id wm-autostart
 exec --no-startup-id wm-autostart-blocking
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
-default_border pixel 3
+default_border pixel 1
 smart_borders  on
-gaps           inner 8
+# gaps           inner 1
 
 bindsym XF86AudioRaiseVolume      exec --no-startup-id pactl set-sink-volume   @DEFAULT_SINK@   +10%
 bindsym XF86AudioLowerVolume      exec --no-startup-id pactl set-sink-volume   @DEFAULT_SINK@   -10%
