--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,3 +13,8 @@ set -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",tmux-256color-italic:Tc"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
+bind-key -n M-1 select-window -t 0
+bind-key -n M-2 select-window -t 1
+bind-key -n M-3 select-window -t 2
+bind-key -n M-4 select-window -t 3
+bind-key -n M-5 select-window -t 4
