--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 # Transparent status line
 set-option -g status-style bg=default
 
+set-option -g prefix C-a
+bind-key C-a last-window
+
 # Ensure window index numbers get reordered on delete.
 set-option -g renumber-windows on
 
@@ -8,13 +11,61 @@ set-option -g focus-events on
 
 set -sg escape-time 0
 
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 
-set-option -ga terminal-overrides ",tmux-256color-italic:Tc"
-set -ga terminal-overrides ",xterm-256color:Tc"
+setw -q -g utf8 on
 
-bind-key -n M-1 select-window -t 0
-bind-key -n M-2 select-window -t 1
-bind-key -n M-3 select-window -t 2
-bind-key -n M-4 select-window -t 3
-bind-key -n M-5 select-window -t 4
+set -g mouse on
+
+set -g base-index 1           # start windows numbering at 1
+setw -g pane-base-index 1     # make pane numbering consistent with windows
+
+setw -g automatic-rename on   # rename window to reflect current program
+set -g renumber-windows on    # renumber windows when a window is closed
+
+set -g set-titles on          # set terminal title
+
+set -g display-panes-time 800 # slightly longer pane indicators display time
+set -g display-time 1000      # slightly longer status messages display time
+
+set -g status-interval 10     # redraw status line every 10 seconds
+
+set -g history-limit 5000
+
+bind-key -n M-1 select-window -t 1
+bind-key -n M-2 select-window -t 2
+bind-key -n M-3 select-window -t 3
+bind-key -n M-4 select-window -t 4
+bind-key -n M-5 select-window -t 5
+
+bind - split-window -v
+bind _ split-window -h
+
+bind -r h select-pane -L  # move left
+bind -r j select-pane -D  # move down
+bind -r k select-pane -U  # move up
+bind -r l select-pane -R  # move right
+bind > swap-pane -D       # swap current pane with the next one
+bind < swap-pane -U       # swap current pane with the previous one
+
+# maximize current pane
+bind + run "cut -c3- '#{TMUX_CONF}' | sh -s _maximize_pane '#{session_name}' '#D'"
+
+# pane resizing
+bind -r H resize-pane -L 2
+bind -r J resize-pane -D 2
+bind -r K resize-pane -U 2
+bind -r L resize-pane -R 2
+
+bind b list-buffers     # list paste buffers
+bind p paste-buffer -p  # paste from the top paste buffer
+bind P choose-buffer    # choose which buffer to paste from
+
+bind Enter copy-mode # enter copy mode
+
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi C-v send -X rectangle-toggle
+bind -T copy-mode-vi y send -X copy-selection-and-cancel
+bind -T copy-mode-vi Escape send -X cancel
+bind -T copy-mode-vi H send -X start-of-line
+bind -T copy-mode-vi L send -X end-of-line
