--- a/config/helix/config.toml
+++ b/config/helix/config.toml
@@ -1,4 +1,4 @@
-theme = "base16_transparent"
+theme = "github_light"
 
 [editor]
 bufferline = "multiple"
@@ -56,10 +56,14 @@ X = ["extend_line_up", "extend_to_line_bounds"]
 
 [keys.normal]
 X = ["extend_line_up", "extend_to_line_bounds"]
+H = "goto_previous_buffer"
+L = "goto_next_buffer"
 
 esc = ["collapse_selection", "keep_primary_selection"]
+C-s = ":w"
 C-g = ":sh topen-git"
 C-t = ":sh topen-bash"
+C-f = [":new", ":insert-output lf -print-selection", "split_selection_on_newline", "goto_file", "goto_last_modification", "goto_last_modified_file", ":buffer-close!", ":redraw"]
 A-f = ":format"
 A-q = ":buffer-close"
 A-j = ["extend_to_line_bounds", "delete_selection", "paste_after"]
