--- a/.gitconfig
+++ b/.gitconfig
@@ -7,53 +7,13 @@
   name = Daniil Antoshin
   email = daniil.antoshin@flant.com
 
+[commit]
+	gpgsign = true
+
 [pull]
   rebase = true
 
 [alias]
   commit = commit --signoff
-
-[delta]
-  features = decorations
-	light = true
-	tabs = 2
-	line-numbers = true
-	navigate = true
-	hyperlinks = true
-
-[difftool "difftastic"]
-  cmd = difft "$MERGED" "$LOCAL" "abcdef1" "100644" "$REMOTE" "abcdef2" "100644"
-
-[difftool]
-  prompt = false
-
-[pager]
-  difftool = true
-
-[diff]
-  external = difft
-  tool = difftastic
-
-[diff "dyff"]
-	command = "dyff_between() { dyff --color on between \"$2\" \"$5\"; }; dyff_between"
-
-[diff]
-  tool = nvimdiff
-  guitool = nvimdiff
-[difftool]
-  prompt = false
-  guiDefault = false
-[merge]
-  tool = nvimdiff
-  guitool = nvimdiff
-[mergetool]
-  prompt = false
-  guiDefault = false
-  keepBackup = false
-
-# NOTE: must set "vimdiff" here and NOT "nvimdiff" for custom layout to work
-# But just for this [mergetool "vimdiff"] section.
-# The other [merge] and [mergetool] sections above MUST be set to "nvimdiff"
-[mergetool "vimdiff"]
-  layout = (LOCAL,BASE,REMOTE) / MERGED + (LOCAL,MERGED,REMOTE) + LOCAL,REMOTE + (LOCAL,MERGED) / (REMOTE,MERGED) + (BASE,LOCAL) / (BASE,REMOTE)
-
+[tag]
+	gpgSign = true
