--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -8,6 +8,8 @@ font-family-italic  = Iosevka NFM Medium Italic
 font-family-bold = Iosevka NFM SemiBold
 font-family-bold-italic  = Iosevka NFM Medium Italic
 
+maximize = true
+
 font-size = 16
 # theme = dark:Raycast_Dark,light:Raycast_Light
 theme = dark:Adventure,light:Raycast_Light
