--- a/config/lazygit/config.yml
+++ b/config/lazygit/config.yml
@@ -22,7 +22,7 @@ git:
 customCommands:
   - key: "<c-a>" # ctrl + a
     description: "Pick AI commit"
-    command: 'echo "{{.Form.Msg}}" > .git/COMMIT_EDITMSG && vim .git/COMMIT_EDITMSG && [ -s .git/COMMIT_EDITMSG ] && git commit --signoff -F .git/COMMIT_EDITMSG || echo "Commit message is empty, commit aborted."'
+    command: 'echo "{{.Form.Msg}}" > .git/COMMIT_EDITMSG && nvim .git/COMMIT_EDITMSG && [ -s .git/COMMIT_EDITMSG ] && git commit --signoff -F .git/COMMIT_EDITMSG || echo "Commit message is empty, commit aborted."'
     context: "files"
     subprocess: true
     prompts:
