--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ set-option -g focus-events on
 set -sg escape-time 0
 
 set -g default-terminal "xterm-256color"
-# set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 setw -q -g utf8 on
 
@@ -50,9 +50,6 @@ bind -r l select-pane -R  # move right
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
 
-# maximize current pane
-bind + run "cut -c3- '#{TMUX_CONF}' | sh -s _maximize_pane '#{session_name}' '#D'"
-
 # pane resizing
 bind -r H resize-pane -L 2
 bind -r J resize-pane -D 2
@@ -61,9 +58,3 @@ bind -r L resize-pane -R 2
 
 bind Enter copy-mode # enter copy mode
 
-bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi C-v send -X rectangle-toggle
-bind -T copy-mode-vi y send -X copy-selection-and-cancel
-bind -T copy-mode-vi Escape send -X cancel
-bind -T copy-mode-vi H send -X start-of-line
-bind -T copy-mode-vi L send -X end-of-line
