--- a/config/sway/config.d/00-apperance.conf
+++ b/config/sway/config.d/00-apperance.conf
@@ -15,3 +15,5 @@ gaps           inner 0
 output "*" bg $HOME/Backgrounds/$(ls $HOME/Backgrounds | shuf -n 1) fill
 
 font pango:Iosevka Nerd Font 12
+
+exec_always gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
