--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,3 +58,5 @@ bind -r L resize-pane -R 2
 
 bind Enter copy-mode # enter copy mode
 
+bind-key -T copy-mode-vi WheelUpPane send -N1 -X scroll-up
+bind-key -T copy-mode-vi WheelDownPane send -N1 -X scroll-down
