--- a/.gitconfig
+++ b/.gitconfig
@@ -1,20 +1,38 @@
 [core]
   editor = nvim
   attributesfile = /Users/danil/.gitattributes
-	excludesfile = /Users/danil/.gitignore_global
+  excludesfile = /Users/danil/.gitignore_global
 
 [user]
   name = Daniil Antoshin
   email = daniil.antoshin@flant.com
-	signingkey = 84C4921C9429DA03
+  signingkey = 84C4921C9429DA03
 
 [commit]
-	gpgsign = true
+  gpgsign = true
 
 [pull]
   rebase = true
 
 [alias]
   commit = commit --signoff
+
 [tag]
-	gpgSign = true
+  gpgSign = true
+
+[core]
+  pager = delta
+
+[interactive]
+  diffFilter = delta --color-only
+
+[include]
+  path = ~/.config/delta/catppuccin.gitconfig
+
+[delta]
+  navigate = true
+  dark = true
+  features = catppuccin-mocha
+
+[merge]
+  conflictstyle = zdiff3
