--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [core]
-  editor = nvim
+  editor = vim
   attributesfile = /Users/danil/.gitattributes
   excludesfile = /Users/danil/.gitignore_global
 
@@ -20,19 +20,9 @@
 [tag]
   gpgSign = true
 
-[core]
-  pager = delta
-
-[interactive]
-  diffFilter = delta --color-only
-
-[include]
-  path = ~/.config/delta/catppuccin.gitconfig
-
-[delta]
-  navigate = true
-  dark = true
-  features = catppuccin-mocha
-
 [merge]
   conflictstyle = zdiff3
+[diff]
+	tool = vimdiff
+[difftool]
+	prompt = false
