--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -10,8 +10,8 @@ font-family-bold-italic  = Iosevka NFM Medium Italic
 
 maximize = true
 
-font-size = 20
-theme = dark:GruvboxDarkHard,light:GruvboxLightHard
+font-size = 22
+theme = dark:GruvboxDark,light:GruvboxLightHard
 background = #1C1C1C
 
 
