--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -10,7 +10,8 @@ font-family-bold-italic  = Iosevka NFM Medium Italic
 
 maximize = true
 
-font-size = 20
-theme = dark:GruvboxDark,light:GruvboxLightHard
-background = #1C1C1C
+font-size = 21
+# theme = dark:GruvboxDark,light:Raycast_Light
+theme = dark:Dark Pastel,light:Raycast_Light
+# background = #1C1C1C
 
