--- a/config/lazygit/config.yml
+++ b/config/lazygit/config.yml
@@ -16,7 +16,7 @@ git:
   commit:
     signOff: true
   paging:
-    externalDiffCommand: difft --color=always --display=inline --syntax-highlight=on --tab-width=2 --background=dark
+    # externalDiffCommand: difft --color=always --display=inline --syntax-highlight=on --tab-width=2 --background=dark
   autoFetch: false
   autoRefresh: false
 customCommands:
