--- a/config/k9s/config.yaml
+++ b/config/k9s/config.yaml
@@ -6,7 +6,7 @@ k9s:
   ui:
     enableMouse: true
     logoless: true
-    # headless: true
-    # skin: transparent
+    headless: true
+    skin: transparent
     # skin: light
     reactive: true
