--- a/config/i3/config
+++ b/config/i3/config
@@ -10,8 +10,8 @@ set $fg       #ffffff
 set $red      #ff0000
 set $darkgray #707070
 
-set $dmenu_style -fn 'Iosevka Nerd Font-12' -sf '#000000' -sb '#ffffff' -nf '#ffffff' -nb '#000000' "$@"
-set $term i3-sensible-terminal
+set $dmenu_style -fn 'Iosevka Nerd Font-14' -sf '#000000' -sb '#ffffff' -nf '#ffffff' -nb '#000000' "$@"
+set $term alacritty
 
 font pango:Iosevka Nerd Font 12
 
