--- a/config/i3/config
+++ b/config/i3/config
@@ -79,6 +79,8 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
+bindsym $mod+Tab workspace back_and_forth
+
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
