--- a/config/k9s/config.yaml
+++ b/config/k9s/config.yaml
@@ -7,6 +7,6 @@ k9s:
     enableMouse: true
     logoless: true
     headless: true
-    skin: transparent
+    # skin: transparent
     # skin: light
     reactive: true
