--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -10,8 +10,9 @@ font-family-bold-italic  = Iosevka NFM Medium Italic
 
 maximize = true
 
-font-size = 16
-# theme = dark:GruvboxDark,light:Raycast_Light
-theme = dark:Dark Pastel,light:Raycast_Light
+font-size = 19
+theme = dark:GruvboxDark,light:Raycast_Light
+# theme = dark:Dark Pastel,light:Raycast_Light
 # background = #1C1C1C
+background = #000000
 
