--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,3 @@
-# Transparent status line
-set-option -g status-style bg=default
-
 # Ensure window index numbers get reordered on delete.
 set-option -g renumber-windows on
 
@@ -27,7 +24,7 @@ set -g set-titles on          # set terminal title
 set -g display-panes-time 800 # slightly longer pane indicators display time
 set -g display-time 1000      # slightly longer status messages display time
 
-set -g status-interval 10     # redraw status line every 10 seconds
+set -g status-interval 1      # redraw status line every 10 seconds
 
 set -g history-limit 5000
 
@@ -61,3 +58,27 @@ bind Enter copy-mode # enter copy mode
 
 bind-key -T copy-mode-vi WheelUpPane send -N1 -X scroll-up
 bind-key -T copy-mode-vi WheelDownPane send -N1 -X scroll-down
+
+set-option -g status-style bg=default
+
+set -g status-justify absolute-centre
+set -g window-status-format '#I #W#[fg=orange]#F'
+set -g window-status-current-format '#[fg=red]#I #W#[fg=red]#F'
+
+set -g status-left '#[fg=cyan]#{username}#[fg=magenta]@#{hostname}'
+set -g status-left-length 100
+
+set -g status-right '#[fg=orange]#{simple_git_status}#[fg=cyan]#{kubectx_context}:#[fg=magenta]#{kubectx_namespace}'
+set -g status-right-length 100
+
+set -g @tome_playbook '~/playbook.sh'
+
+set -g @plugin 'laktak/tome'
+set -g @plugin 'laktak/extrakto'
+
+set -g @plugin 'kristijanhusak/tmux-simple-git-status'
+set -g @plugin 'soyuka/tmux-current-pane-hostname'
+set -g @plugin 'tony-sol/tmux-kubectx'
+
+run '~/.tmux/plugins/tpm/tpm'
+
