--- a/.tmux.conf
+++ b/.tmux.conf
@@ -76,6 +76,8 @@ set -g @tome_playbook '~/playbook.sh'
 set -g @plugin 'laktak/tome'
 set -g @plugin 'laktak/extrakto'
 
+set -g @plugin 'tmux-plugins/tmux-cowboy'
+
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'kristijanhusak/tmux-simple-git-status'
 set -g @plugin 'soyuka/tmux-current-pane-hostname'
