--- a/config/k9s/config.yaml
+++ b/config/k9s/config.yaml
@@ -4,7 +4,7 @@ k9s:
   maxConnRetry: 5
   readOnly: false
   ui:
-    enableMouse: true
+    # enableMouse: true
     logoless: true
     headless: true
     # skin: transparent
