--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,9 +5,9 @@ set-option -g focus-events on
 
 set -sg escape-time 0
 
-set-option -g default-terminal "screen-256color"
-# set -g default-terminal "xterm-256color"
-# set-option -ga terminal-overrides ",xterm-256color:Tc"
+# set-option -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 setw -q -g utf8 on
 
