return for config with love

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,21 +38,8 @@ bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
 
-bind - split-window -v
-bind _ split-window -h
-
-bind -r h select-pane -L  # move left
-bind -r j select-pane -D  # move down
-bind -r k select-pane -U  # move up
-bind -r l select-pane -R  # move right
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
-
-# pane resizing
-bind -r H resize-pane -L 2
-bind -r J resize-pane -D 2
-bind -r K resize-pane -U 2
-bind -r L resize-pane -R 2
 
 bind Enter copy-mode # enter copy mode
 
@@ -77,6 +64,8 @@ set -g @plugin 'laktak/tome'
 set -g @plugin 'laktak/extrakto'
 
 set -g @plugin 'tmux-plugins/tmux-cowboy'
+
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'kristijanhusak/tmux-simple-git-status'
