--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -10,6 +10,6 @@ font-family-bold-italic  = Iosevka Medium Italic
 
 maximize = true
 
-font-size = 20
-theme = dark:retrobox,light:Raycast_Light
-
+font-size = 16
+theme = dark:retrobox,light:Builtin Light
+# background = #161616
