--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -11,5 +11,8 @@ font-family-bold-italic  = Iosevka Medium Italic
 maximize = true
 
 font-size = 15
-theme = dark:retrobox,light:Builtin Light
-# background = #161616
+# theme = dark:retrobox,light:Builtin Light
+# theme = dark:deep,light:Builtin Light
+theme = dark:GruvboxDark,light:Builtin Light
+# background = #1c1c1c
+
