--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,9 +65,10 @@ set -g @plugin 'laktak/extrakto'
 
 set -g @plugin 'tmux-plugins/tmux-cowboy'
 
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
 set -g @plugin 'kristijanhusak/tmux-simple-git-status'
 set -g @plugin 'soyuka/tmux-current-pane-hostname'
 set -g @plugin 'tony-sol/tmux-kubectx'
 
 run '~/.tmux/plugins/tpm/tpm'
-
