--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -10,6 +10,6 @@ font-family-bold-italic  = Iosevka Medium Italic
 
 maximize = true
 
-font-size = 18
+font-size = 17
 
-theme = Catppuccin Mocha
+theme = dark:Alabaster Dark,light:Alabaster Dark
