add tmux hotkeys
Signed-off-by: Daniil Antoshin <daniil.antoshin@flant.com>

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,6 +48,9 @@ set -s copy-command 'wl-copy'
 bind-key -T copy-mode-vi WheelUpPane send -N1 -X scroll-up
 bind-key -T copy-mode-vi WheelDownPane send -N1 -X scroll-down
 
+bind-key v new-window "kubectl ctx"
+bind-key V new-window "kubectl ns"
+
 set-option -g status-style bg=default
 
 set -g status-justify absolute-centre
