--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,3 @@
-# Ensure window index numbers get reordered on delete.
 set-option -g renumber-windows on
 
 set-option -g focus-events on
@@ -14,7 +13,7 @@ setw -q -g utf8 on
 set -g mouse on
 
 set -g base-index 1           # start windows numbering at 1
-setw -g pane-base-index 1     # make pane numbering consistent with windows
+setw -g pane-base-index 2     # make pane numbering consistent with windows
 
 setw -g automatic-rename on   # rename window to reflect current program
 set -g renumber-windows on    # renumber windows when a window is closed
@@ -41,10 +40,10 @@ bind-key -n M-9 select-window -t 9
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
 
-bind Enter copy-mode # enter copy mode
+bind Enter copy-mode
 
-bind-key -T copy-mode-vi WheelUpPane send -N1 -X scroll-up
-bind-key -T copy-mode-vi WheelDownPane send -N1 -X scroll-down
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+set -s copy-command 'xsel -i'
 
 bind-key v new-window "kubectl ctx"
 bind-key V new-window "kubectl ns"
