--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,9 +1,11 @@
 font_family Iosevka Nerd Font Mono
-font_size 16.0
+font_size 14.0
 
 scrollback_lines 20000
 scrollbar hovered
 macos_titlebar_color dark
 macos_option_as_alt yes
+
+scrollback_pager nvimpager
 
 include catppuccin.conf
