--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,8 +5,13 @@ set-option -g focus-events on
 set -sg escape-time 0
 
 # set-option -g default-terminal "screen-256color"
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+# set -g default-terminal "xterm-256color"
+# set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+set -g default-terminal "xterm-kitty"
+set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colors - needs tmux-3.0
 
 setw -q -g utf8 on
 
