--- a/config/k9s/config.yaml
+++ b/config/k9s/config.yaml
@@ -7,6 +7,5 @@ k9s:
     # enableMouse: true
     logoless: true
     headless: true
-    skin: catppuccin-mocha-transparent
-    # skin: light
+    # skin: catppuccin-mocha-transparent
     reactive: true
