--- a/config/i3/config
+++ b/config/i3/config
@@ -5,13 +5,20 @@ set $down  j
 set $up    k
 set $right l
 
-set $bg       #1e1e2e
-set $fg       #cdd6f4
-set $red      #19cb00
-set $accent   #a6e3a1
-set $darkgray #7f849c
+# catppuccin ────────────────────────────────────────────────────────────────────────────────────────────────────────────
+# set $bg       #1e1e2e
+# set $fg       #cdd6f4
+# set $accent   #a6e3a1
+# set $darkgray #7f849c
+# set $dmenu_style -fn 'Iosevka Nerd Font-14' -sf '#1e1e2e' -sb '#cdd6f4' -nf '#cdd6f4' -nb '#1e1e2e' "$@"
 
-set $dmenu_style -fn 'Iosevka Nerd Font-14' -sf '#1e1e2e' -sb '#cdd6f4' -nf '#cdd6f4' -nb '#1e1e2e' "$@"
+# base ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────
+set $bg       #000000
+set $fg       #ffffff
+set $accent   #00cd00
+set $darkgray #7f849c
+set $dmenu_style -fn 'Iosevka Nerd Font-14' -sf '#000000' -sb '#ffffff' -nf '#ffffff' -nb '#000000' "$@"
+
 set $term kitty
 
 font pango:Iosevka Nerd Font 12
