--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,14 +4,14 @@ set-option -g focus-events on
 
 set -sg escape-time 0
 
-# set-option -g default-terminal "screen-256color"
-# set -g default-terminal "xterm-256color"
-# set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-set -g default-terminal "xterm-kitty"
-set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colors - needs tmux-3.0
+# set -g default-terminal "xterm-kitty"
+# set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+# set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+# set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colors - needs tmux-3.0
 
 setw -q -g utf8 on
 
@@ -53,6 +53,11 @@ bind < swap-pane -U       # swap current pane with the previous one
 bind Enter copy-mode
 
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+set -s copy-command 'xsel -b'
+
+if-shell 'test "$(uname)" = "Darwin"' 'set -s copy-command "pb-copy"'
+if-shell 'test "$(uname)" != "Darwin"' 'set -s copy-command "xsel -b"'
+
 
 bind-key v new-window "kubectl ctx"
 bind-key V new-window "kubectl ns"
