--- a/config/i3/config
+++ b/config/i3/config
@@ -6,11 +6,11 @@ set $up    k
 set $right l
 
 # catppuccin ────────────────────────────────────────────────────────────────────────────────────────────────────────────
-# set $bg       #1e1e2e
-# set $fg       #cdd6f4
-# set $accent   #a6e3a1
-# set $darkgray #7f849c
-# set $dmenu_style -fn 'Iosevka Nerd Font-14' -sf '#1e1e2e' -sb '#cdd6f4' -nf '#cdd6f4' -nb '#1e1e2e' "$@"
+set $bg       #1e1e2e
+set $fg       #cdd6f4
+set $accent   #a6e3a1
+set $darkgray #7f849c
+set $dmenu_style -fn 'Iosevka Nerd Font-14' -sf '#1e1e2e' -sb '#cdd6f4' -nf '#cdd6f4' -nb '#1e1e2e' "$@"
 
 # habamax ───────────────────────────────────────────────────────────────────────────────────────────────────────────────
 # set $bg       #1c1c1c
@@ -20,11 +20,11 @@ set $right l
 # set $dmenu_style -fn 'Iosevka Nerd Font-14' -sf '#1c1c1c' -sb '#c7c7c7' -nf '#c7c7c7' -nb '#1c1c1c' "$@"
 
 # base ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────
-set $bg       #000000
-set $fg       #ffffff
-set $accent   #00cd00
-set $darkgray #7f849c
-set $dmenu_style -fn 'Iosevka Nerd Font-14' -sf '#000000' -sb '#ffffff' -nf '#ffffff' -nb '#000000' "$@"
+# set $bg       #000000
+# set $fg       #ffffff
+# set $accent   #00cd00
+# set $darkgray #7f849c
+# set $dmenu_style -fn 'Iosevka Nerd Font-14' -sf '#000000' -sb '#ffffff' -nf '#ffffff' -nb '#000000' "$@"
 
 set $term st
 
