--- a/config/k9s/config.yaml
+++ b/config/k9s/config.yaml
@@ -7,5 +7,6 @@ k9s:
     # enableMouse: true
     logoless: true
     headless: true
+    skin: transparent
     # skin: catppuccin-mocha-transparent
     reactive: true
