--- a/config/i3/config
+++ b/config/i3/config
@@ -30,7 +30,7 @@ set $term st
 
 font pango:Iosevka Nerd Font 12
 
-exec --no-startup-id wm-autostart
+exec_always wm-autostart
 exec --no-startup-id wm-autostart-blocking
 
 default_border pixel 1
@@ -150,7 +150,7 @@ client.unfocused               $bg        $bg       $darkgray      $bg          
 client.urgent                  $accent    $bg       $accent        $accent      $accent
 
 bar {
-  i3bar_command i3bar --transparency
+  # i3bar_command i3bar --transparency
   status_command baraction
   tray_padding 5
 	position top
