--- a/config/k9s/config.yaml
+++ b/config/k9s/config.yaml
@@ -4,9 +4,8 @@ k9s:
   maxConnRetry: 5
   readOnly: false
   ui:
-    # enableMouse: true
+    enableMouse: true
     logoless: true
     headless: true
-    skin: transparent
-    # skin: catppuccin-mocha-transparent
+    skin: light
     reactive: true
