--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -6,10 +6,9 @@ window_padding_height 5
 
 scrollback_lines 20000
 scrollbar hovered
+macos_titlebar_color dark
 macos_option_as_alt yes
 
 scrollback_pager nvimpager
 
-# macos_titlebar_color dark
 # include base.conf
-include github.conf
