--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -3,16 +3,18 @@ macos-option-as-alt = true
 keybind = alt+left=unbind
 keybind = alt+right=unbind
 
-font-family = Iosevka NFM Medium
-
+font-family = Iosevka NF
+font-thicken = true
+font-thicken-strength = 200
+ 
 maximize = true
 
 window-padding-x = 8
 window-padding-y = 5
 
 font-size = 17
-adjust-cell-width = -05%
-adjust-cell-height = 12%
+adjust-cell-width = -10%
+adjust-cell-height = 10%
 
 theme = base
 
